change button color green

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ margin: 100px auto;
 #info button{
     border: 1px solid;
     padding: 10px;
-    color: white;
+    color: red;
     border-radius: 6px;
 
 }
